# discord-ext-boardgames

./: .flake8  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/workflows/: main.yml
discord/ext/boardgames/: __init__.py  boardgames.py  converter.py
